--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,19 @@
+@font-face {
+    font-family: inter;
+    src: url(./assets/fonts/Inter-VariableFont_slnt\,wght.ttf);
+}
+
 .attribution {
     font-size: 11px; text-align: center;
 }
 
 .attribution a {
     color: hsl(228, 45%, 44%);
+}
+
+:root {
+    font-family: inter;
+    font-size: 12px;
 }
 
 :root,
